# v3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.txt  config.xml
scripts/: cmake.sh
src/: AnimationManager.cpp  AnimationManager.h  AnimationManager.hpp  BRDF.hpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  Config.hpp  Connector3D.cpp  Connector3D.hpp  Dispatcher.cpp  Hello.cpp  Hello.h  InterContext.hpp  KDTree.cpp  KDTree.hpp  Light.hpp  Main.cpp  Material.hpp  Mesh3D.cpp  Mesh3D.hpp  Model.cpp  Model.hpp  ModelHelper.cpp  ModelObjectsHelper.cpp  ModelObjectsHelper.hpp  ModelScenesHelper.cpp  ModelScenesHelper.hpp  Object3D.cpp  Object3D.hpp  PreconfiguredScene.cpp  PreconfiguredScene.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  Scene3D.cpp  Scene3D.hpp  (+7 more)
src/config/: Config.cpp
src/controller/: AnimationManager.cpp  AnimationManager.hpp
src/geo/: BoundingBox.hpp  KDTree.cpp  KDTree.hpp  Ray.cpp  Ray.hpp  Tessellation3D.cpp  Tessellation3D.hpp  Vec3D.h
src/model/: Model.cpp  Model.hpp  ModelHelper.hpp  ModelObjectsHelper.cpp  ModelObjectsHelper.hpp  ModelScenesHelper.cpp  Object3D.hpp  Scene3D.cpp  Scene3D.hpp
src/parser/: Connector3D.cpp  Connector3D.hpp
src/renderer/: BRDF.hpp  Dispatcher.hpp  InterContext.hpp  Light.hpp  Material.hpp  PixelBlock.cpp  PixelBlock.hpp  Renderer.cpp  Renderer.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp
src/viewer/: Camera.cpp  Camera.hpp  Viewer.cpp  Viewer.hpp
